# johndevera.com

./: .gitignore  LICENSE  README.md  pyproject.toml
jdv-fix-ssl-certificates/: fix-ssl-certificates.ipynb
jdv-streamlit/: demo.ipynb  streamlit_demo.py
setup_new_computer/: 0_initial_installer.sh  install_brew.sh  install_iterm2.sh  install_pyenv.sh  install_tig.sh  install_vs_code.sh  install_zsh_plugin.sh  setup_git_config.sh  setup_ssh_keys.sh
